--- a/Site content/ZSR/src/app.html
+++ b/Site content/ZSR/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html dir="ltr" lang="en-US">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
