--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"/>
     %sveltekit.head%
   </head>
 
-  <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
-    <div>%sveltekit.body%</div>
-  </body>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
+
 </html>
