--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="google-adsense-account" content="ca-pub-3602487920405886">
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     %sveltekit.head%
     <style>
