add text to speech

--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -8,7 +8,7 @@
     %sveltekit.head%
     <style>
       body {
-        background: url('background.jpg') no-repeat center center fixed;
+        background: url('/background.jpg') no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
