--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -18,5 +18,6 @@
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=6BLD3hdr"></script>
   </body>
 </html>
