--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="google-adsense-account" content="ca-pub-3602487920405886">
+    <!-- Google AdSense meta tag -->
+    <meta name="google-adsense-account" content="ca-pub-3602487920405886">
+    
+    <!-- Favicon for the site -->
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Netlify Identity Widget script -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- SvelteKit Head (dynamically injects head content) -->
     %sveltekit.head%
+
     <style>
       body {
         background: url('/background.jpg') no-repeat center center fixed;
@@ -18,17 +26,20 @@
     </style>
   </head>
   <body data-sveltekit-preload-data="hover">
+    <!-- SvelteKit Body (dynamically injects body content) -->
     <div style="display: contents">%sveltekit.body%</div>
-		<script>
-		  if (window.netlifyIdentity) {
-		    window.netlifyIdentity.on("init", user => {
-		      if (!user) {
-			window.netlifyIdentity.on("login", () => {
-			  document.location.href = "/admin/";
-			});
-		      }
-		    });
-		  }
-		</script>
+
+    <!-- Netlify Identity Login handling -->
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";  // Redirect to Netlify CMS Admin after login
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
