--- a/site/htdocs/static/admin/index.html
+++ b/site/htdocs/static/admin/index.html
@@ -5,20 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Content Manager</title>
 
-  <!-- Include Netlify Identity Widget from CDN -->
+  <!-- Netlify Identity Widget -->
   <script src="https://cdn.jsdelivr.net/npm/netlify-identity-widget@1.9.1/build/netlify-identity-widget.min.js" async></script>
 
-  <!-- Include Netlify CMS from CDN -->
+  <!-- Netlify CMS Script -->
   <script src="https://cdn.jsdelivr.net/npm/netlify-cms@^2.0.0/dist/netlify-cms.min.js" defer></script>
-  
-  <!-- Preconnect to improve performance -->
+
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
 </head>
 <body>
   <h1>Content Manager</h1>
 
-  <!-- Initialize Netlify CMS and handle login redirection -->
   <script>
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
