--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Google AdSense meta tag -->
     <meta name="google-adsense-account" content="ca-pub-3602487920405886" />
-    
-    <!-- Favicon for the site -->
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-
-    <!-- SvelteKit Head (dynamically injects head content) -->
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     %sveltekit.head%
-
     <style>
       body {
         background: url('/background.jpg') no-repeat center center fixed;
@@ -21,19 +16,16 @@
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
-
-    <!-- Netlify Identity Script -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";  // Redirect after login
-            });
-          }
-        });
-      }
-    </script>
+	<script>
+			if (window.netlifyIdentity) {
+			  window.netlifyIdentity.on("init", user => {
+				if (!user) {
+				  window.netlifyIdentity.on("login", () => {
+					document.location.href = "/admin/";
+				  });
+				}
+			  });
+			}
+		  </script>
   </body>
 </html>
