--- a/site/htdocs/static/admin/index.html
+++ b/site/htdocs/static/admin/index.html
@@ -9,6 +9,6 @@
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-		<script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"></script>
 </body>
 </html>
