--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="google-adsense-account" content="ca-pub-3602487920405886" />
-        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     %sveltekit.head%
     <style>
