--- a/site/htdocs/static/admin/index.html
+++ b/site/htdocs/static/admin/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Preconnect to CDN for faster initial connection -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  
+  <!-- DNS Prefetch to reduce latency in domain resolution -->
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+  
   <title>Content Manager</title>
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
+  <!-- Netlify Identity Widget for user authentication -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-<script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"></script>
+  
+  <!-- Sveltia CMS loaded from jsDelivr CDN to improve load speed -->
+  <script src="https://cdn.jsdelivr.net/npm/@sveltia/cms@latest/dist/sveltia-cms.js"></script>
+
 </body>
 </html>
