--- a/site/htdocs/static/admin/index.html
+++ b/site/htdocs/static/admin/index.html
@@ -10,7 +10,7 @@
   <!-- DNS Prefetch to reduce latency in domain resolution -->
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   
-  <title>Content Manager</title>
+  <title>Dashboard | Zepp OS screen reader</title>
   
   <!-- Netlify Identity Widget for user authentication -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
