--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-UK" prefix="og: https://ogp.me/ns#" class="relative h-full antialiased dark">
+<html dir="ltr" lang="en-US" prefix="og: https://ogp.me/ns#" class="relative h-full antialiased dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
