Add Prettier config and update ESLint setup
Introduced .prettierrc and .prettierignore files for code formatting. Added a new eslint.config.js with improved Svelte and Prettier integration. Updated package scripts to include Prettier checks and formatting. Upgraded dependencies for ESLint, Svelte, Vite, and related plugins. Renamed global.d.js to global.d.ts for proper TypeScript support.

--- a/site/htdocs/src/app.html
+++ b/site/htdocs/src/app.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html dir="ltr" lang="en-US" prefix="og: https://ogp.me/ns#" class="relative h-full antialiased dark">
+<!doctype html>
+<html
+  dir="ltr"
+  lang="en-US"
+  prefix="og: https://ogp.me/ns#"
+  class="relative h-full antialiased dark"
+>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
